--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/image": "^0.16.2",
     "astro": "^2.1.7",
+    "gsap": "^3.11.5",
     "sharp": "^0.31.3",
     "swiper": "^9.1.1"
   }
